# Equity-Research-Platform

./: LICENSE  README.md
.devcontainer/: devcontainer.json
Automated_Equity_Research_Platform_GitHub_Ready/: VALIDATION.md  VALIDATION_GITHUB_READY.md  app.py  requirements.txt
Automated_Equity_Research_Platform_GitHub_Ready/Automated_Equity_Research_Platform_GitHub_Ready/: COLLEGE_APPLICATION.md  LICENSE  PROJECT_SPEC.md  README.md  app.py  pyproject.toml
Automated_Equity_Research_Platform_GitHub_Ready/Automated_Equity_Research_Platform_GitHub_Ready/notebooks/: 03_Valuation.ipynb  04_Risk_Analytics.ipynb
Automated_Equity_Research_Platform_GitHub_Ready/Automated_Equity_Research_Platform_GitHub_Ready/src/equity_research/: __init__.py  config.py  dashboard.py  exceptions.py  features.py  fundamentals.py  reporting.py  risk.py  visualization.py
Automated_Equity_Research_Platform_GitHub_Ready/notebooks/: 00_START_HERE.ipynb  01_Data_Pipeline.ipynb  02_Financial_Analysis.ipynb  05_Report_Generator.ipynb  06_Colab_Dashboard.ipynb  99_Combined_Research_Dashboard.ipynb
Automated_Equity_Research_Platform_GitHub_Ready/src/equity_research/: cli.py  data.py  pipeline.py  utils.py  valuation.py  visualization.py
Automated_Equity_Research_Platform_GitHub_Ready/tests/: test_core.py
