[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "automated-equity-research-platform"
version = "1.0.0"
description = "GitHub-ready equity research, valuation, risk analytics, portfolio optimization, Streamlit, and Google Colab dashboard platform."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Abhay Gadam"}]
dependencies = [
    "numpy>=1.26",
    "pandas>=2.0",
    "scipy>=1.11",
    "requests>=2.31",
    "yfinance>=0.2.40",
    "plotly>=5.20",
    "ipywidgets>=8.1",
    "pyarrow>=15",
    "markdown>=3.6",
    "tabulate>=0.9",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "nbformat>=5.10"]

[project.scripts]
equity-research = "equity_research.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
